--- a/www/index.html
+++ b/www/index.html
@@ -64,15 +64,15 @@
       <p>It doesn't even require you to trust it, because you can order him to
       create a backup of the files before overwriting it.</p>
       <p>This project is hosted under <a href="http://cejug.org">CEJUG</a> in <a href="http://cejug.dev.java.net">Java.Net</a>.</p>
-      <p class="footnote">&copy; 2008 Itamar Carvalho - itamarc+dirsynch AT gmail&middot;com</p>
+      <p class="footnote">&copy; 2008-2009 Itamar Carvalho - itamarc+dirsynch AT gmail&middot;com</p>
       </div>
       <div id="screenshots" style="display: none;">
       <p>Only one for now. Take a look at the main screen:</p>
-      <img src="main-screen-1.5.png">
+      <img src="main-screen-1.6.png">
       </div>
       <div id="download" style="display: none;">
       <p>You can find the released files in "Documents &amp; files" section.</p>
-      <p>The last release is <a href="https://dirsynch.dev.java.net/servlets/ProjectDocumentList?folderID=9288&expandFolder=9288&folderID=9288">v1.5.2, available here</a>.</p>
+      <p>The last release is <a href="https://dirsynch.dev.java.net/servlets/ProjectDocumentList?folderID=11705&expandFolder=11705&folderID=11705">v1.6, available here</a>.</p>
       </div>
       <div id="howtouse" style="display: none;">
       <p><a href="DirSynch-help.html">Here</a> you can see the help file,
